<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:fillViewport="true"
    android:overScrollMode="always"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/search_results_text"
            android:textColor="?textColorPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/zero_search_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/no_song_found_message_text"
            android:textColor="?textColorPrimaryLight"
            android:textSize="16sp"
            android:visibility="gone" />

        <io.github.balram02.musify.ui.custom.NestedScrollableListView
            android:id="@+id/search_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:nestedScrollingEnabled="true"
            tools:listheader="Search Results" />

        <TextView
            android:id="@+id/recent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/recently_played_text"
            android:textColor="?textColorPrimary"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_recent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_recent_message_text"
            android:textColor="?textColorPrimaryLight"
            android:textSize="17sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:nestedScrollingEnabled="true"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_rcv_recents" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
