<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    app:cardBackgroundColor="?colorOverlay"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/title_text"
            android:textColor="?textColorPrimary"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="?textColorPrimary" />

        <!-- TODO: remove layout & make compound TextView-->
        <LinearLayout
            android:id="@+id/song_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_info_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/song_properties_text"
                android:textColor="?textColorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- TODO: remove layout & make compound TextView-->
        <LinearLayout
            android:id="@+id/add_to_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/fav_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:src="@drawable/ic_favorite_filled_white_24dp" />

            <TextView
                android:id="@+id/fav_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/add_to_favorites_text"
                android:textColor="?textColorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
